# invoice-pay-record-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-check.yml
app/: __init__.py  api_client.py  config_manager.py  constants.py  data_models.py  encryption.py  local_ocr.py  regions.py
app/gui/: dialogs.py  main_window.py
scripts/: install_dependencies.sh  pdf_to_images.py
