[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-pay-record-manager"
version = "1.5.9"
description = "A local Python desktop app for organizing invoices, payment proofs, OCR dates, categories, and expense records."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SC123667" }
]
keywords = [
  "invoice",
  "receipt",
  "payment-records",
  "expense-management",
  "tkinter",
  "ocr",
  "wechat-files",
  "siliconflow",
  "simpletex"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Utilities"
]
dependencies = [
  "requests>=2.31",
  "tkinterdnd2>=0.4",
  "pymupdf>=1.24"
]

[project.urls]
Homepage = "https://github.com/SC123667/invoice-pay-record-manager"
Issues = "https://github.com/SC123667/invoice-pay-record-manager/issues"
Changelog = "https://github.com/SC123667/invoice-pay-record-manager/blob/main/CHANGELOG.md"

[project.scripts]
invoice-manager = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["app", "app.gui"]
